--- a/src/dontbreaktheice.tex
+++ b/src/dontbreaktheice.tex
@@ -5,10 +5,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
+\usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
-\usepackage{multicol}
 
 \usepackage{xinttools}
 \usepackage[nomessages]{fp}
@@ -33,30 +34,10 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{DBTI}
 
-const GAME_DESC = "The goal of this game is to get from the bottom of the field to the top,\
-while only using specified fields. These fields are shown once in the beginning (red).\
-Therefore the player needs to remember the path and click the right fields in\
-the right order. If the user misssteps the game is lost";
+var fieldWidth = AFMakeNumber(\fieldWidth);
+var fieldHeight = AFMakeNumber(\fieldHeight);
 
-% Outside variables
-const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
-const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
-
-% Constants
-% For the path generation
-const EMPTY = 0;
-const REACHABLE = 1;
-const FORBIDDEN = -1;
-const IS_PATH = -2;
-% For the visualisation
-const HIDDEN = 0;
-const R_REVEAL = 1;
-const W_REVEAL = -1;
-
-% Globals
-% Animation interval variable
 var run;
-% The game field array
 var complField = new Array();
 var freePath = new Array();
 % Lock if the game has ended
@@ -68,8 +49,7 @@ var play = false;
 % Which field was found last
 var currentField = -1;
 
-% Color data
-const COLORS = new Array(
+var colors = new Array(
     color.black,
     [ "RGB", 0.843, 0.078, 0.058 ],
     [ "RGB", 0.203, 0.603, 0.054 ],
@@ -77,13 +57,11 @@ const COLORS = new Array(
     [ "RGB", 0.560, 0.078, 0.533 ]
 );
 
+highlightcolor = [ "RGB", 0.984, 0.960, 0.176 ];
+
 %%%%%%%%%%
 % Helper %
 %%%%%%%%%%
-/**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
- */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
@@ -91,55 +69,36 @@ function getRandomInt(max) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-/**
- * Initialise the default game state.
- */
 function initialise() {
-    for (var row = 0; row < FIELD_HEIGHT; row++) {
+    for (var row = 0; row < fieldHeight; row++) {
         var tmp = new Array();
-        for (var column = 0; column < FIELD_WIDTH; column++) {
-            tmp.push(EMPTY);
+        for (var column = 0; column < fieldWidth; column++) {
+            tmp.push(0);
         }
         complField.push(tmp);
     }
 
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
+    this.getField("winner").fillColor = color.transparent;
+    this.getField("winner").borderColor = color.transparent;
 
-    printInfoText("Select fields and find a way across.");
-
-    % Init the GUI
     initialiseButtons();
 
     createPath();
 }
 
-/**
- * Initialise all buttons from the GUI.
- * For example add callbacks and set the correct colors.
- */
 function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
     this.getField("restart").highlight="none";
 
-    var funcName = "revealField";
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
+    var funcName = "colorField";
+    for (var x = 0; x < fieldWidth; x++) {
+        for (var y = 0; y < fieldHeight; y++) {
             var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
+            this.getField("pos" + x + y).setAction("MouseDown", callbackName);
         }
     }
-
-    % Tooltip setup
-    this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
-    this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
-    this.getField("tooltipbtn").highlight="none";
 }
 
-/**
- * Restarts the game by clearing the field array and creating a new path.
- */
 function restart() {
     % Prevent multiple restart processes at the same time
     if (!play) {
@@ -148,11 +107,11 @@ function restart() {
 
     % Clear complField and redraw
     var field;
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
+    for (var x = 0; x < fieldWidth; x++) {
+        for (var y = 0; y < fieldHeight; y++) {
+            complField[y][x] = 0;
 
-            field = this.getField("pos" + x + "-" + y);
+            field = this.getField("pos" + x + y);
             field.delay = true;
             field.borderColor = color.white;
             field.fillColor = color.white;
@@ -161,87 +120,40 @@ function restart() {
     }
 
     % Reset field for other use
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
+    for (var x = 0; x < fieldWidth; x++) {
+        for (var y = 0; y < fieldHeight; y++) {
+            complField[y][x] = 0;
         }
     }
 
     gameover = false;
     play = false;
-    printInfoText("Select fields and find a way across.");
+    this.getField("winner").value = "";
     createPath();
-}
-
-/**
- * Enable or disable the tooltip
- *
- * @param {Boolean} on Enable or disable tooltip
- */
-function tooltip(on) {
-    if (on) {
-        % Move the tooltip field to the center of the screen
-        % and adjust the size so the text can be displayed
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.value = GAME_DESC;
-
-        field.multiline = true;
-        field.textSize = 16;
-        field.fillColor = color.gray;
-        % hight 842, width 596
-        % upper-left x, upper-left y, lower-right x and lower-right y
-        field.rect = [128, 601, 468, 401];
-
-        field.delay = false;
-    } else {
-        % Remove the field such that it is not visible
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
-        field.delay = false;
-    }
 }
 
 %%%%%%%%%%%%%%%%%%%
 % Path generation %
 %%%%%%%%%%%%%%%%%%%
-/**
- * Creates the path from bottom to top.
- * This is done by marking the bot and top row as unreachable first.
- * Afterwards a list of all possible slots is created from which
- * a random one is selected until only one path is left.
- * After each draw it needs to be checked wether there is still a path,
- * if there is none the field is added to the final path, since there is
- * none without this field. When the list is empty only one path remains.
- *
- * Starts an animated draw after generating.
- */
 function createPath() {
     freePath = new Array();
 
-    var startX = getRandomInt(FIELD_WIDTH);
-    var endX = getRandomInt(FIELD_WIDTH);
+    var startX = getRandomInt(fieldWidth);
+    var endX = getRandomInt(fieldWidth);
 
-    % Mark bottom and top rowas unselectable
-    for (var ix = 0; ix < FIELD_WIDTH; ix++) {
-        complField[0][ix] = FORBIDDEN;
-        complField[FIELD_HEIGHT - 1][ix] = FORBIDDEN;
+    for (var ix = 0; ix < fieldWidth; ix++) {
+        complField[0][ix] = -1;
+        complField[fieldHeight - 1][ix] = -1;
     }
 
     % Create a list of all potential fields
     var fieldList = [];
-    for (var i = 0; i < FIELD_WIDTH; i++) {
-        for (var j = 1; j < FIELD_HEIGHT - 1; j++) {
+    for (var i = 0; i < fieldWidth; i++) {
+        for (var j = 1; j < fieldHeight - 1; j++) {
             fieldList.push([i, j]);
         }
     }
-    fieldList.push([startX, FIELD_HEIGHT - 1]);
+    fieldList.push([startX, fieldHeight - 1]);
 
     % Loop as long as there are entrys in the list
     while (fieldList.length !== 0) {
@@ -253,48 +165,33 @@ function createPath() {
 
         % Remove and mark the field
         fieldList.splice(rnd, 1);
-        complField[elem[1]][elem[0]] = FORBIDDEN;
-        % If there is no path available after marking this field,
-        % the field is needed for the path
-        if (!doesPathExist([startX, FIELD_HEIGHT - 1], [endX, 0], complField)) {
-            complField[elem[1]][elem[0]] = EMPTY;
+        complField[elem[1]][elem[0]] = -1;
+        if (!doesPathExist([startX, fieldHeight - 1], [endX, 0], complField)) {
+            complField[elem[1]][elem[0]] = 0;
         }
     }
 
-    freePath = getPath([startX, FIELD_HEIGHT - 1], [endX, 0], complField);
+    freePath = getPath([startX, fieldHeight - 1], [endX, 0], complField);
 
     % Reset field for other use
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
+    for (var x = 0; x < fieldWidth; x++) {
+        for (var y = 0; y < fieldHeight; y++) {
+            complField[y][x] = 0;
         }
     }
 
     currentField = -1;
-    drawAll();
+    draw();
 
     % Animation interval
     run = app.setInterval("drawPath()", 300);
 }
 
-/**
- * Creates a path from the start position to the end position.
- * For this a list is generated to which all pathfields should be added.
- * Beginning with the start position the neighbourhood is searched for
- * the next field.
- * Works best if there is only one path.
- *
- * @param {Number} start The start 2D position.
- * @param {Number} end The end 2D position.
- * @param {Array} The field in which to search.
- * @return {Array} An array containing all positions of the path.
- */
 function getPath(start, end, field) {
     var pathList = [start];
-    % While the target is not reached search neighbourhood
     while (pathList[pathList.length - 1][0] !== end[0] || pathList[pathList.length - 1][1] !== end[1]) {
         var elem = pathList[pathList.length - 1];
-    	field[elem[1]][elem[0]] = IS_PATH;
+    	field[elem[1]][elem[0]] = -2;
 
         % Push next piece
         var xpo = elem[0] + 1;
@@ -303,19 +200,19 @@ function getPath(start, end, field) {
         var ymo = elem[1] - 1;
 
         var added = false;
-       	if (ypo < FIELD_HEIGHT && field[ypo][elem[0]] == REACHABLE) {
+       	if (ypo < fieldHeight && field[ypo][elem[0]] == 1) {
         	pathList.push([elem[0], ypo]);
         	added = true;
         }
-        if (ymo >= 0 && field[ymo][elem[0]] == REACHABLE) {
+        if (ymo >= 0 && field[ymo][elem[0]] == 1) {
         	pathList.push([elem[0], ymo]);
         	added = true;
         }
-        if (xpo < FIELD_WIDTH && field[elem[1]][xpo] == REACHABLE) {
+        if (xpo < fieldWidth && field[elem[1]][xpo] == 1) {
         	pathList.push([xpo, elem[1]]);
         	added = true;
         }
-        if (xmo >= 0 && field[elem[1]][xmo] == REACHABLE) {
+        if (xmo >= 0 && field[elem[1]][xmo] == 1) {
         	pathList.push([xmo, elem[1]]);
         	added = true;
         }
@@ -328,27 +225,12 @@ function getPath(start, end, field) {
     return pathList;
 }
 
-/**
- * Checks wether there is a path from the end to the start in the given field.
- * Starting with the end position a list is generated containing positions,
- * that are reachable and whose neighbours should be added to this list.
- * A position is removed after marking, resulting in an empty list when all
- * fields where either marked or could not be reached.
- * If the start field is marked after the list is empty the field can be
- * reached, otherwise it is not reachable.
- *
- * @param {Number} start The start 2D position.
- * @param {Number} end The end 2D position.
- * @param {Array} The field in which to search.
- * @return {Boolean} True if path exists false otherwise
- */
 function doesPathExist(start, end, field) {
 	% Cleanup: Ensure that there is no leftover data
-	% that could come from earlier calls of this method
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (field[y][x] > EMPTY) {
-                field[y][x] = EMPTY;
+    for (var x = 0; x < fieldWidth; x++) {
+        for (var y = 0; y < fieldHeight; y++) {
+            if (field[y][x] > 0) {
+                field[y][x] = 0;
             }
         }
     }
@@ -356,8 +238,8 @@ function doesPathExist(start, end, field) {
     % Starting from the goal mark all fields to indicate
     % whether they can reach it
     var toMarkList = [end];
-    field[end[1]][end[0]] = REACHABLE;
-    field[start[1]][start[0]] = EMPTY;
+    field[end[1]][end[0]] = 1;
+    field[start[1]][start[0]] = 0;
 
     while (toMarkList.length !== 0) {
   	    var elem = toMarkList.pop();
@@ -368,49 +250,63 @@ function doesPathExist(start, end, field) {
         var ypo = elem[1] + 1;
         var ymo = elem[1] - 1;
 
-       	if (ypo < FIELD_HEIGHT && field[ypo][elem[0]] == EMPTY) {
+       	if (ypo < fieldHeight && field[ypo][elem[0]] == 0) {
         	toMarkList.push([elem[0], ypo]);
             % Mark the field
-            field[ypo][elem[0]] = REACHABLE;
+            field[ypo][elem[0]] = 1;
         }
-        if (ymo >= 0 && field[ymo][elem[0]] == EMPTY) {
+        if (ymo >= 0 && field[ymo][elem[0]] == 0) {
         	toMarkList.push([elem[0], ymo]);
             % Mark the field
-            field[ymo][elem[0]] = REACHABLE;
+            field[ymo][elem[0]] = 1;
         }
-        if (xpo < FIELD_WIDTH && field[elem[1]][xpo] == EMPTY) {
+        if (xpo < fieldWidth && field[elem[1]][xpo] == 0) {
         	toMarkList.push([xpo, elem[1]]);
             % Mark the field
-            field[elem[1]][xpo] = REACHABLE;
+            field[elem[1]][xpo] = 1;
         }
-        if (xmo >= 0 && field[elem[1]][xmo] == EMPTY) {
+        if (xmo >= 0 && field[elem[1]][xmo] == 0) {
         	toMarkList.push([xmo, elem[1]]);
             % Mark the field
-            field[elem[1]][xmo] = REACHABLE;
+            field[elem[1]][xmo] = 1;
         }
     }
 
 	% Check the start field if it is marked as reachable
-    return field[start[1]][start[0]] == REACHABLE;
+    return field[start[1]][start[0]] == 1;
 }
 
-%%%%%%%%%%%%%
-% Gamelogic %
-%%%%%%%%%%%%%
-/**
- * Reveal the selected field and update the visuals accordingly.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- */
-function revealField(x, y) {
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
+function drawPath() {
+    % Test if animation has finished then reset
+    if (drawPiece >= freePath.length) {
+        drawPiece = 0;
+        for (var idx = 0; idx < freePath.length; idx++) {
+            complField[freePath[idx][1]][freePath[idx][0]] = 0;
+        }
+        draw();
+        play = true;
+        app.clearInterval(run);
+    } else {
+        % Redraw and continue
+        complField[freePath[drawPiece][1]][freePath[drawPiece][0]] = 1;
+        draw();
+
+        drawPiece++;
+    }
+}
+
+% Color one field
+function colorField(x, y) {
     if (gameover || !play) {
         return;
     }
 
     % Is field a neighbour of the current or first line
     if (currentField == -1) {
-        if (y != FIELD_HEIGHT -1) {
+        if (y != fieldHeight -1) {
             return;
         }
     } else {
@@ -424,20 +320,13 @@ function revealField(x, y) {
     % Test if the selected field is on the path
     var hit = false;
     if (freePath[currentField + 1][0] == x && freePath[currentField + 1][1] == y) {
-        complField[y][x] = R_REVEAL;
+        complField[y][x] = 1;
         hit = true;
-        % Unmark the last neighbourhood
-        if (currentField != -1) {
-            markNeighbors(freePath[currentField][0], freePath[currentField][1], false);
-        }
-        % Move to next field
         currentField++;
         if (currentField == freePath.length - 1) {
             gameover = true;
-            printInfoText("Congratulations you found a way across!");
+            printWinner(true);
         }
-        % Mark the neighbouring fields that are accessible
-        markNeighbors(x, y, true);
     }
 
     % If nothing was hit the game is over
@@ -448,117 +337,64 @@ function revealField(x, y) {
             complField[freePath[idx][1]][freePath[idx][0]] = 1;
         }
         complField[y][x] = -1;
-        printInfoText("Sadly you died!");
+        printWinner(false);
     }
 
-    draw(x, y);
+    draw();
 }
 
-%%%%%%%%%%%%%%%%%%%%%
-% Draw and coloring %
-%%%%%%%%%%%%%%%%%%%%%
-/**
- * Draw all fields.
- */
-function drawAll() {
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            draw(x, y);
+function draw() {
+    var field;
+    for (var x = 0; x < fieldWidth; x++) {
+        for (var y = 0; y < fieldHeight; y++) {
+            field = this.getField("pos" + x + y);
+            field.delay = true;
+            var value = complField[y][x];
+            if (value > 0) {
+                field.fillColor = colors[1];
+                field.borderColor = colors[1];
+            } else if (value < 0) {
+                field.fillColor = colors[0];
+                field.borderColor = colors[0];
+            } else {
+                field.fillColor = color.white;
+                field.borderColor = color.white;
+            }
+            field.delay = false;
+        }
+    }
+
+    % Mark the neighbouring fields that are accessible
+    if (currentField > -1) {
+        var x = freePath[currentField][0];
+        var y = freePath[currentField][1];
+
+        % Define the neighbourhood
+        var directions = [[-1, 0], [1, 0], [0, 1], [0, -1]]
+
+        for (var idx = 0; idx < directions.length; idx++) {
+            var newX = x + directions[idx][0];
+            var newY = y + directions[idx][1];
+
+            % Check for out of bounds
+            if (newX < 0 || newX >= fieldWidth || newY < 0 || newY >= fieldHeight) {
+                continue;
+            }
+
+            field = this.getField("pos" + newX + newY);
+            field.delay = true;
+            field.borderColor = colors[2];
+            field.delay = false;
         }
     }
 }
 
-/**
- * Since only one field is updated with each input,
- * only this field needs to be redrawn.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- */
-function draw(x, y) {
-    var field = this.getField("pos" + x + "-" + y);
-    field.delay = true;
-    var value = complField[y][x];
-    % If the field was correctly revealed
-    if (value > HIDDEN) {
-        field.fillColor = COLORS[1];
-        field.borderColor = COLORS[1];
-    }
-    % If the field was wrongly revealed
-    else if (value < HIDDEN) {
-        field.fillColor = COLORS[0];
-        field.borderColor = COLORS[0];
-    }
-    % Not revealed
-    else {
-        field.fillColor = color.white;
-        field.borderColor = color.white;
-    }
-    field.delay = false;
-}
-
-/**
- * Start an animated draw of the generated path.
- * After all pieces of the path where revealed once,
- * everything is cleared again.
- */
-function drawPath() {
-    % Test if animation has finished then reset
-    if (drawPiece >= freePath.length) {
-        drawPiece = 0;
-        for (var idx = 0; idx < freePath.length; idx++) {
-            complField[freePath[idx][1]][freePath[idx][0]] = HIDDEN;
-            draw(freePath[idx][0], freePath[idx][1]);
-        }
-        play = true;
-        app.clearInterval(run);
+function printWinner(won) {
+    if (won) {
+        this.getField("winner").value = "Congratulations you found a way across!";
     } else {
-        % Redraw and continue
-        complField[freePath[drawPiece][1]][freePath[drawPiece][0]] = R_REVEAL;
-        draw(freePath[drawPiece][0], freePath[drawPiece][1]);
-
-        drawPiece++;
+        this.getField("winner").value = "Sadly you died!";
     }
-}
-
-/**
- * Highlight the neighboring fields of the given position.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- */
-function markNeighbors(x, y, mark) {
-    % Define the neighbourhood
-    var directions = [[-1, 0], [1, 0], [0, 1], [0, -1]]
-
-    for (var idx = 0; idx < directions.length; idx++) {
-        var newX = x + directions[idx][0];
-        var newY = y + directions[idx][1];
-
-        % Check for out of bounds
-        if (newX < 0 || newX >= FIELD_WIDTH || newY < 0 || newY >= FIELD_HEIGHT) {
-            continue;
-        }
-
-        field = this.getField("pos" + newX + "-" + newY);
-        field.delay = true;
-        if (mark) {
-            field.borderColor = COLORS[2];
-        } else {
-            field.borderColor = color.white;
-        }
-        field.delay = false;
-    }
-}
-
-/**
- * Print information about the winner and the gamestate.
- */
-function printInfoText(text) {
-    var field = this.getField("info");
-    field.delay = true;
-    field.value = text;
-    field.delay = false;
 }
 
 \end{insDLJS}
@@ -570,36 +406,23 @@ function printInfoText(text) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+    \section*{Don't break the ice}
+
+    % Calculate the max width and height of a block
+    \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
+    \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
+
+    \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
+    \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
+
+    % Define the blocksize via the smaller amount
+    \ifnum\blocksizeW<\blocksizeH
+        \def\blocksize{\blocksizeW}
+    \else
+        \def\blocksize{\blocksizeH}
+    \fi
+
     \begin{Form}
-
-        % Header
-        \begin{multicols}{2}
-            % Title
-            \section*{Don't break the ice}
-        \columnbreak
-            % Tooltip object
-            \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
-                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                        \centering?\strut{}
-                    \end{tcolorbox}%
-                }
-            \end{flushright}%
-        \end{multicols}
-
-        % Calculate the max width and height of a block
-        \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
-        \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
-
-        \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
-
-        % Define the blocksize via the smaller amount
-        \ifnum\blocksizeW<\blocksizeH
-            \def\blocksize{\blocksizeW}
-        \else
-            \def\blocksize{\blocksizeH}
-        \fi
 
         \begin{tcolorbox}
             \centering%
@@ -610,7 +433,7 @@ function printInfoText(text) {
                     \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
                         \TextField[%
                             width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1-#2, readonly=true]{}%
+                            bordercolor=white, name=pos#1#2, readonly=true]{}%
                     }\vspace{3pt}
                     \newline%
                 }%
@@ -618,11 +441,10 @@ function printInfoText(text) {
             %
             \centering%
             \includegraphics[width=0.25\textwidth]{images/start}
-            \TextField[bordercolor=white, width=0.0cm, name=tooltiptxt, readonly=true]{}
         \end{tcolorbox}
 
         \begin{center}%
-            \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
+            \begin{tabularx}{\textwidth}{@{} X X @{}}%
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
@@ -630,11 +452,9 @@ function printInfoText(text) {
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, width=\linewidth, readonly=true]{}
+                    \TextField[name=winner, width=\linewidth, readonly=true]{}
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
-
     \end{Form}
-
 \end{document}
