--- a/src/memory.tex
+++ b/src/memory.tex
@@ -5,6 +5,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
+\usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -25,11 +27,11 @@
 % Parameter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Obacht: width * height needs to be an even number
-\def\fieldWidth{6}
-\def\fieldHeight{6}
-
+\def\fieldWidth{4}
+\def\fieldHeight{4}
+\def\winningPieces{3}
 % Max playercount is 5
-\def\playerCount{3}
+\def\playerCount{2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Javascript
@@ -37,24 +39,13 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{Memory}
 
-const GAME_DESC = "In this game multiple player compete to collect the most pairs.\
-Each pair contains two cards with the same symbol on it. At the beginning all\
-cards are hidden and each player can reveal two of them when it is their turn.\
-After the reveal both are hidden again if they do not match or they are removed if they do.\
-In that case the reveiling player gets another turn.";
-
-% Outside variables
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 const SCREEN_TEXT_WIDTH = 300;
 const MAX_PLAYERS = AFMakeNumber(\playerCount);
 const MAX_PAIRS = (FIELD_WIDTH * FIELD_HEIGHT) / 2;
 
-% Constants
-% -
-
-% Globals
-% The game field array
+var run;
 var complField = new Array();
 % Lock if the game has ended
 var gameover = false;
@@ -64,8 +55,7 @@ var beforeLastField = false;
 var pairsFound = 0;
 var playerPoints = [];
 
-% Symbol array
-const MEMORY_SYMBOLS = [
+var memorySymbols = [
     0x260E, % telefon
     0x261E, % hand white
     0x261B, % hand black
@@ -86,13 +76,19 @@ const MEMORY_SYMBOLS = [
     0x271C
 ];
 
+var colors = new Array(
+    [ "RGB", 0.843, 0.078, 0.058 ],
+    [ "RGB", 0.203, 0.603, 0.054 ],
+    [ "RGB", 0.078, 0.305, 0.560 ],
+    [ "RGB", 0.560, 0.078, 0.533 ],
+    color.black
+);
+
+highlightcolor = [ "RGB", 0.984, 0.800, 0.176 ];
+
 %%%%%%%%%%
 % Helper %
 %%%%%%%%%%
-/**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
- */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
@@ -100,27 +96,22 @@ function getRandomInt(max) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-/**
- * Initialise the default game state.
- */
 function initialise() {
-    % Create an array that contains all symbols twice
     var symbols = [];
     for (var i = 0; i < MAX_PAIRS; i++) {
-        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i]));
-        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i]));
+        symbols.push(String.fromCharCode(memorySymbols[i]));
+        symbols.push(String.fromCharCode(memorySymbols[i]));
     }
 
-    % Create the field by removing one element for each slot
     for (var row = 0; row < FIELD_HEIGHT; row++) {
         var tmp = new Array();
         for (var column = 0; column < FIELD_WIDTH; column++) {
             var rnd = getRandomInt(symbols.length);
             var elem = symbols[rnd];
             symbols.splice(rnd, 1);
-            % UTF8 symbol and is the field removed
             tmp.push([elem, false]);
         }
+        % UTF8 symbol and is the field removed
         complField.push(tmp);
     }
 
@@ -128,16 +119,10 @@ function initialise() {
         playerPoints.push(0);
     }
 
-    % Init the GUI
     initialiseButtons();
 }
 
-/**
- * Initialise all buttons from the GUI.
- * For example add callbacks.
- */
 function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
     this.getField("restart").highlight="none";
 
@@ -145,37 +130,54 @@ function initialiseButtons() {
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
             var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
-            this.getField("pos" + x + "-" + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
-            this.getField("pos" + x + "-" + y).alignment = "center";
+            this.getField("pos" + x + y).setAction("MouseDown", callbackName);
+            this.getField("pos" + x + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+            this.getField("pos" + x + y).alignment = "center";
         }
     }
 
-    % Info field setup
     this.getField("info").fillColor = color.transparent;
     this.getField("info").borderColor = color.transparent;
 
-    % Tooltip button setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
 
-    printInfoText("Your Turn: Player " + playerIdx);
+    printInfoText(0, false);
 }
 
-/**
- * Restarts the game by clearing the field array and redistributing cards.
- * Resets playerpoints and gamevars.
- */
+function tooltip(on) {
+    if (on) {
+        var field = this.getField("tooltiptxt");
+        field.delay = true;
+        field.alignment = "center";
+        field.value = "This is a game.";
+
+        field.fillColor = color.gray;
+        % hight 842, width 596
+        % upper-left x, upper-left y, lower-right x and lower-right y
+        field.rect = [128, 601, 468, 401];
+
+        field.delay = false;
+    } else {
+        var field = this.getField("tooltiptxt");
+        field.delay = true;
+        field.value = "";
+
+        field.fillColor = color.gray;
+        field.rect = [0, 0, 0, 0];
+
+        field.delay = false;
+    }
+}
+
 function restart() {
-    % Create an array that contains all symbols twice
     var symbols = [];
     for (var i = 0; i < MAX_PAIRS; i++) {
-        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i]));
-        symbols.push(String.fromCharCode(MEMORY_SYMBOLS[i]));
+        symbols.push(String.fromCharCode(memorySymbols[i]));
+        symbols.push(String.fromCharCode(memorySymbols[i]));
     }
 
-    % Create the field by removing one element for each slot
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
             var rnd = getRandomInt(symbols.length);
@@ -183,7 +185,7 @@ function restart() {
             symbols.splice(rnd, 1);
             complField[y][x] = [elem, false];
 
-            var field = this.getField("pos" + x + "-" + y);
+            var field = this.getField("pos" + x + y);
             field.delay = true;
             field.value = "";
             field.borderColor = color.white;
@@ -203,55 +205,12 @@ function restart() {
     pairsFound = 0;
     playerIdx = 1;
 
-    printInfoText("Your Turn: Player " + playerIdx);
+    printInfoText();
 }
 
-/**
- * Enable or disable the tooltip
- *
- * @param {Boolean} on Enable or disable tooltip
- */
-function tooltip(on) {
-    if (on) {
-        % Move the tooltip field to the center of the screen
-        % and adjust the size so the text can be displayed
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.value = GAME_DESC;
-
-        field.multiline = true;
-        field.textSize = 16;
-        field.fillColor = color.gray;
-        % hight 842, width 596
-        % upper-left x, upper-left y, lower-right x and lower-right y
-        field.rect = [128, 581, 468, 381];
-
-        field.delay = false;
-    } else {
-        % Remove the field such that it is not visible
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
-        field.delay = false;
-    }
-}
-
-%%%%%%%%%%%%%
-% Gamelogic %
-%%%%%%%%%%%%%
-/**
- * Reveal the card at the given coordinates.
- * If already two fields are revealed, they are either hidden or removed.
- * Does not do anything if field is already revealed.
- *
- * @param {Number} x The x coordinate.
- * @param {Number} y The y coordinate.
- */
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
 function revealField(x, y) {
     % This removes the cursor and fixes minor bugs
     this.getField("info").setFocus();
@@ -276,9 +235,9 @@ function revealField(x, y) {
             % Check if field is full or pairs left
             if (++pairsFound == MAX_PAIRS) {
                 gameover = true;
-                % Print game is over
-                printInfoText("The Game is over, all pairs found.");
             }
+            % Print game is over
+            printInfoText();
         } else {
             % Hide both symbols
             draw(lastField[0], lastField[1], "");
@@ -312,7 +271,7 @@ function revealField(x, y) {
             playerPoints[playerIdx - 1]++;
         }
         % Print whos turn it is
-        printInfoText("Your Turn: Player " + playerIdx);
+        printInfoText();
     } else {
         lastField = [x, y];
     }
@@ -320,49 +279,31 @@ function revealField(x, y) {
     draw(x, y, complField[y][x][0]);
 }
 
-%%%%%%%%%%%%%%%%%%%%%
-% Draw and coloring %
-%%%%%%%%%%%%%%%%%%%%%
-/**
- * Redraw the given position using the given value.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- * @param {String} value The text value.
- */
 function draw(x, y, value) {
-    var field = this.getField("pos" + x + "-" + y);
+    var field = this.getField("pos" + x + y);
     field.delay = true;
     field.value = value;
     field.delay = false;
 }
 
-/**
- * Remove the value at the given position.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- */
 function remove(x, y) {
-    var field = this.getField("pos" + x + "-" + y);
+    var field = this.getField("pos" + x + y);
     field.delay = true;
     field.value = "";
     field.borderColor = color.black;
     field.delay = false;
 }
 
-/**
- * Print information about the game.
- *
- * @param {String} text Info string
- */
-function printInfoText(text) {
+function printInfoText() {
     var field = this.getField("info");
     field.delay = true;
-    field.value = text;
+    if (gameover) {
+        field.value = "Gameover";
+    } else {
+        field.value = "Your Turn: Player " + playerIdx;
+    }
     field.delay = false;
 
-    % Refresh the current points
     var field = this.getField("pointtable");
     field.delay = true;
     var string = "";
@@ -382,54 +323,50 @@ function printInfoText(text) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+    \begin{multicols}{2}
+        \section*{Memory}
+    \columnbreak
+        \begin{flushright}%
+        \PushButton[name=tooltipbtn, bordercolor=white]{%
+            \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                \centering
+                ?\strut
+            \end{tcolorbox}%
+        }
+        \end{flushright}%
+    \end{multicols}
+
+    % Calculate the max width and height of a block
+    \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
+    \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
+
+    \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
+    \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
+
+    % Define the blocksize via the smaller amount
+    \ifnum\blocksizeW<\blocksizeH
+        \def\blocksize{\blocksizeW}
+    \else
+        \def\blocksize{\blocksizeH}
+    \fi
+
     \begin{Form}
 
-        % Header
-        \begin{multicols}{2}
-            % Title
-            \section*{Memory}
-        \columnbreak
-            % Tooltip object
-            \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
-                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                        \centering?\strut{}
-                    \end{tcolorbox}%
-                }
-            \end{flushright}%
-        \end{multicols}
-
-        % Calculate the max width and height of a block
-        \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
-        \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
-
-        \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
-
-        % Define the blocksize via the smaller amount
-        \ifnum\blocksizeW<\blocksizeH
-            \def\blocksize{\blocksizeW}
-        \else
-            \def\blocksize{\blocksizeH}
-        \fi
-
-        % The gamefield
         \begin{tcolorbox}
             \begin{flushright}
                 \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
                     \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
                         \TextField[%
                             width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1-#2, readonly=true]{}%
+                            bordercolor=white, name=pos#1#2, readonly=true]{}%
                     }\vspace{3pt}
                     \newline%
                 }%
             \end{flushright}%
         \end{tcolorbox}
 
-        % Game related buttons
         \begin{center}%
-            \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
+            \begin{tabularx}{\textwidth}{@{} X X @{}}%
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
