--- a/src/particles.tex
+++ b/src/particles.tex
@@ -5,6 +5,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
+\usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -33,14 +35,7 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{TicTacToe}
 
-const GAME_DESC = "In this application you can see a small particle system.\
-Via the gui it is possible to choose one of the available.";
-
-% Outside variables
 const PARTICLE_COUNT = AFMakeNumber(\particleCount);
-
-% Constants
-% Spawn dimensions
 const UPPER_LIMIT = 842;
 const LOWER_LIMIT = 0;
 const LEFT_LIMIT = 0;
@@ -49,47 +44,46 @@ const PARTICLE_SIZE = 10;
 const PARTICLE_SIZE_H = PARTICLE_SIZE / 2;
 % The amount of space that a particle moves each frame
 const STEP_SIZE = 4;
-const DEAD = false;
-const ALIVE = true;
 
-% Globals
-% Animation interval variable
 var run;
-% Particle array
 var particles = new Array();
 var particleType = 0;
 
-% Probabilities for emits
-const PROBABILITY = [
+var probability = [
     98,
     50
 ]
 
-% Particle arrays
-const SNOW_SYMBOLS = [
+var snowSymbols = [
     0x2744,
     0x2745,
     0x2746,
     0x2749
 ]
 
-const FLOWER_SYMBOLS = [
+var flowerSymbols = [
     0x2740
 ];
 
-const CIRCLE_SYMBOLS = [
+var circleSymbols = [
     0x25CF,
     0x25CB,
     0x25CC
 ];
 
+var colors = new Array(
+    [ "RGB", 0.843, 0.078, 0.058 ],
+    [ "RGB", 0.203, 0.603, 0.054 ],
+    [ "RGB", 0.078, 0.305, 0.560 ],
+    [ "RGB", 0.560, 0.078, 0.533 ],
+    color.black
+);
+
+highlightcolor = [ "RGB", 0.984, 0.800, 0.176 ];
+
 %%%%%%%%%%
 % Helper %
 %%%%%%%%%%
-/**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
- */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
@@ -97,14 +91,10 @@ function getRandomInt(max) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-/**
- * Initialise the default particle state.
- */
 function initialise() {
     % Initialise all particles as dead
     for (var idx = 0; idx < PARTICLE_COUNT; idx++) {
-        % Lifestate, position, symbolindex
-        particles.push([DEAD, [0, 0], 0]);
+        particles.push([false, [0, 0], 0]);
 
         field = this.getField("particle" + idx);
         field.delay = true;
@@ -115,41 +105,63 @@ function initialise() {
         field.delay = false;
     }
 
-    % Init the GUI
     initialiseButtons();
 
-    % Start the animation interval
     run = app.setInterval("runAll()", 100);
 }
 
-/**
- * Initialise all buttons from the GUI.
- * For example add callbacks.
- */
 function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
     this.getField("restart").highlight="none";
+
+    % field.textColor = colors[value - 1];
+    % field.value = String.fromCharCode(playerSymbols[value - 1]);
+    % field.borderColor = color.white;
+    % field.setAction("MouseDown", callbackName);
+    % field.textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+    % field.alignment = "center";
+    % Rotation does work but only for 90, 180 and 270
+    % field.rotation = 90;
 
     this.getField("particleType").borderColor = color.white;
     this.getField("particleType").currentValueIndices = 0;
     this.getField("particleType").commitOnSelChange = true;
 
-    % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
 }
 
-/**
- * Restart the particle system and the interval.
- */
+function tooltip(on) {
+    if (on) {
+        var field = this.getField("tooltiptxt");
+        field.delay = true;
+        field.alignment = "center";
+        field.value = "This is a particle system.";
+
+        field.fillColor = color.gray;
+        % hight 842, width 596
+        % upper-left x, upper-left y, lower-right x and lower-right y
+        field.rect = [128, 601, 468, 401];
+
+        field.delay = false;
+    } else {
+        var field = this.getField("tooltiptxt");
+        field.delay = true;
+        field.value = "";
+
+        field.fillColor = color.gray;
+        field.rect = [0, 0, 0, 0];
+
+        field.delay = false;
+    }
+}
+
 function restart() {
     app.clearInterval(run);
 
     for (var idx = 0; idx < PARTICLE_COUNT; idx++) {
-        % Lifestate, position, symbolindex
-        particles[idx] = [DEAD, [0, 0], 0];
+        particles[idx] = [false, [0, 0], 0];
 
         field = this.getField("particle" + idx);
         field.delay = true;
@@ -164,53 +176,15 @@ function restart() {
     run = app.setInterval("runAll()", 100);
 }
 
-/**
- * Enable or disable the tooltip
- *
- * @param {Boolean} on Enable or disable tooltip
- */
-function tooltip(on) {
-    if (on) {
-        % Move the tooltip field to the center of the screen
-        % and adjust the size so the text can be displayed
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.value = GAME_DESC;
-
-        field.multiline = true;
-        field.textSize = 16;
-        field.fillColor = color.gray;
-        % hight 842, width 596
-        % upper-left x, upper-left y, lower-right x and lower-right y
-        field.rect = [128, 601, 468, 401];
-
-        field.delay = false;
-    } else {
-        % Remove the field such that it is not visible
-        var field = this.getField("tooltiptxt");
-        field.delay = true;
-        field.value = "";
-
-        field.multiline = false;
-        field.fillColor = color.gray;
-        field.rect = [0, 0, 0, 0];
-
-        field.delay = false;
-    }
-}
-
-%%%%%%%%%%%%%%%%
-% Drawing loop %
-%%%%%%%%%%%%%%%%
-/**
- * Main loop used to emit new particles or move the current ones.
- */
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
 function runAll() {
     particleType = this.getField("particleType").currentValueIndices;
 
     % Emit new particle if particle dead and random condition
     for (var idx = 0; idx < PARTICLE_COUNT; idx++) {
-        if (particles[idx][0] === false && getRandomInt(100) > PROBABILITY[particleType]) {
+        if (particles[idx][0] === false && getRandomInt(100) > probability[particleType]) {
             emitParticle(idx);
         } else {
             moveParticles(idx);
@@ -219,33 +193,20 @@ function runAll() {
 
 }
 
-/**
- * Emits a new particle for the given index.
- * Dependent on the selected particle system.
- *
- * @param {Number} idx The index of the particle in the array.
- */
 function emitParticle(idx) {
     if (particleType == 0) {
         var pos = getRandomInt(RIGHT_LIMIT - PARTICLE_SIZE) + PARTICLE_SIZE_H;
-        % Select a random snow symbol
-        var symb = SNOW_SYMBOLS[getRandomInt(SNOW_SYMBOLS.length)];
-        % Lifestate, position, symbol
-        particles[idx] = [ALIVE, [pos, UPPER_LIMIT - PARTICLE_SIZE_H], symb];
+        var symb = snowSymbols[getRandomInt(snowSymbols.length)];
+
+        particles[idx] = [true, [pos, UPPER_LIMIT - PARTICLE_SIZE_H], symb];
     } else {
         var pos_x = getRandomInt(RIGHT_LIMIT - PARTICLE_SIZE) + PARTICLE_SIZE_H;
         var pos_y = getRandomInt(UPPER_LIMIT - PARTICLE_SIZE) + PARTICLE_SIZE_H;
-        % Lifestate, position, symbolindex
-        particles[idx] = [ALIVE, [pos_x, pos_y], 0];
+
+        particles[idx] = [true, [pos_x, pos_y], 0];
     }
 }
 
-/**
- * Move the particle with the given index.
- * Dependent on the selected particle system.
- *
- * @param {Number} idx The index of the particle in the array.
- */
 function moveParticles(idx) {
     var shift_x = 0;
     var add_x = 0;
@@ -256,28 +217,24 @@ function moveParticles(idx) {
     if (particleType == 0) {
         field.value = String.fromCharCode(particles[idx][2]);
         field.textSize = PARTICLE_SIZE;
-        % Apply shifting motion like waves
         shift_x = Math.cos((particles[idx][1][0] + particles[idx][1][1]) / 40.0) * 20;
 
         particles[idx][1][1] -= STEP_SIZE;
-        % Ending lifecycle when out of render area
         if (particles[idx][1][1] < LOWER_LIMIT) {
-            particles[idx][0] = DEAD;
+            particles[idx][0] = false;
         }
     } else {
-        field.value = String.fromCharCode(CIRCLE_SYMBOLS[Math.floor(particles[idx][2] / 3)]);
+        field.value = String.fromCharCode(circleSymbols[Math.floor(particles[idx][2] / 3)]);
         field.textSize = PARTICLE_SIZE + particles[idx][2] * 2;
 
         particles[idx][2]++;
         add_x = particles[idx][2];
         add_y = particles[idx][2];
-        % Ending lifecycle when all symbols iterated
-        if (particles[idx][2] >= CIRCLE_SYMBOLS.length * 3) {
-            particles[idx][0] = DEAD;
+        if (particles[idx][2] >= circleSymbols.length * 3) {
+            particles[idx][0] = false;
         }
     }
 
-    % Adjust the rect position of the TextField
     var rect = [
         particles[idx][1][0] - PARTICLE_SIZE_H - add_x + shift_x,
         particles[idx][1][1] + PARTICLE_SIZE_H + add_y,
@@ -298,36 +255,31 @@ function moveParticles(idx) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+    \begin{multicols}{2}
+        \section*{Particles}
+    \columnbreak
+        \begin{flushright}%
+        \PushButton[name=tooltipbtn, bordercolor=white]{%
+            \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                \centering
+                ?\strut
+            \end{tcolorbox}%
+        }
+        \end{flushright}%
+    \end{multicols}
+
+    \vspace*{\fill}
+
     \begin{Form}
 
-        % Header
-        \begin{multicols}{2}
-            % Title
-            \section*{Particles}
-        \columnbreak
-            % Tooltip object
-            \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
-                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                        \centering?\strut{}
-                    \end{tcolorbox}%
-                }
-            \end{flushright}%
-        \end{multicols}
-
-        % Fill the page such that the remaining elements get pushed to the bottom
-        \vspace*{\fill}
-
-        % The fields for the particle system
         \xintFor* #1 in {\xintSeq{0}{\particleCount-1}} \do {%
             \TextField[bordercolor=white, name=particle#1, readonly=true]{}%
         }
 
         \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}%
 
-        % Game related buttons
         \begin{center}%
-            \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
+            \begin{tabularx}{\textwidth}{@{} X X @{}}%
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
