--- a/src/set.tex
+++ b/src/set.tex
@@ -5,6 +5,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
+\usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -43,7 +45,6 @@ It is your job to find a so called set, containing three cards, where each attri
 is either the same or for each card different. Example: You may find a set,\
 where the symbol is the same but color and appearance differ.";
 
-% Outside variables
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 const SCREEN_TEXT_HEIGHT = 500;
@@ -63,7 +64,6 @@ const COL_P = 1;
 const APP_P = 2;
 const NUM_P = 3;
 
-% Globals
 % The game field
 var complField = new Array();
 % Lock if the game has ended
@@ -80,17 +80,17 @@ var cardList = new Array();
 % Save the indices of the unused cards
 var unusedCards = new Array();
 
-% Symbol array
+% Different symbols
 % Sadly special symbols using String.fromCharCode() does not work
 % because they cant be visualised in italic/bold
-const SYMBOLS = [
+var symbols = [
     "A",
     "B",
     "C"
 ];
 
-% Color data
-const COLORS = new Array(
+% Different colors
+var colors = new Array(
     [ "RGB", 0.843, 0.078, 0.058 ],
     [ "RGB", 0.203, 0.603, 0.054 ],
     [ "RGB", 0.078, 0.305, 0.560 ]
@@ -99,10 +99,6 @@ const COLORS = new Array(
 %%%%%%%%%%
 % Helper %
 %%%%%%%%%%
-/**
- * Returns a random number between 0 and the param.
- * @param {Number} max The upperbound
- */
 function getRandomInt(max) {
     return Math.floor(Math.random() * max);
 }
@@ -110,15 +106,11 @@ function getRandomInt(max) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-/**
- * Initialise the default game state.
- * Distribute initial cards.
- */
 function initialise() {
     % Create all card combinations and indices
     var idx = 0;
-    for (var s = 0; s < SYMBOLS.length; s++) {
-        for (var c = 0; c < COLORS.length; c++) {
+    for (var s = 0; s < symbols.length; s++) {
+        for (var c = 0; c < colors.length; c++) {
             for (var a = 0; a < APPEARANCES; a++) {
                 for (var n = 1; n <= NUMBER; n++) {
                     cardList.push([s, c, a, n]);
@@ -203,7 +195,6 @@ function initialiseButtons() {
         f.delay = false;
     }
 
-    % Info field setup
     this.getField("info").fillColor = color.transparent;
     this.getField("info").borderColor = color.transparent;
 
@@ -211,45 +202,6 @@ function initialiseButtons() {
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
-
-    printInfoText("Please select the player who found a set!");
-}
-
-/**
- * Restart the game and clear everything and redistribute the initial cards.
- */
-function restart() {
-    % Reset the unused cards - every card is unused now
-    unusedCards = new Array();
-    for (var idx = 0; idx < SYMBOLS.length * COLORS.length * APPEARANCES * NUMBER; idx++) {
-        unusedCards.push(idx++);
-    }
-
-    % Reset field
-    for (var x = 0; x < FIELD_WIDTH; x++) {
-        for (var y = 0; y < FIELD_HEIGHT; y++) {
-            % Get random element from the cardList and remove the card afterwards
-            var rnd = getRandomInt(unusedCards.length);
-            complField[y][x] = unusedCards[rnd];
-            unusedCards.splice(rnd, 1);
-            draw(x, y);
-        }
-    }
-
-    % Set point-fields back to zero
-    for (var p = 1; p <= MAX_PLAYERS; p++) {
-        points[p - 1] = 0;
-        var f = this.getField("points" + p);
-        f.delay = true;
-        f.value = 0;
-        f.delay = false;
-    }
-
-    % Reset game state
-    lastSelections = [];
-    gameover = false;
-
-    playerIdx = -1;
 
     printInfoText("Please select the player who found a set!");
 }
@@ -306,9 +258,48 @@ function tooltip(on) {
     }
 }
 
-%%%%%%%%%%%%%
-% Gamelogic %
-%%%%%%%%%%%%%
+/**
+ * Restart the game and clear everything
+ */
+function restart() {
+    % Reset the unused cards - every card is unused now
+    unusedCards = new Array();
+    for (var idx = 0; idx < symbols.length * colors.length * APPEARANCES * NUMBER; idx++) {
+        unusedCards.push(idx++);
+    }
+
+    % Reset field
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            % Get random element from the cardList and remove the card afterwards
+            var rnd = getRandomInt(unusedCards.length);
+            complField[y][x] = unusedCards[rnd];
+            unusedCards.splice(rnd, 1);
+            draw(x, y);
+        }
+    }
+
+    % Set point-fields back to zero
+    for (var p = 1; p <= MAX_PLAYERS; p++) {
+        points[p - 1] = 0;
+        var f = this.getField("points" + p);
+        f.delay = true;
+        f.value = 0;
+        f.delay = false;
+    }
+
+    % Reset game state
+    lastSelections = [];
+    gameover = false;
+
+    playerIdx = -1;
+
+    printInfoText("Please select the player who found a set!");
+}
+
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
 /**
  * Selects a player via the given id.
  * @param {Number} idx The player index.
@@ -326,10 +317,7 @@ function selectPlayer(idx) {
 }
 
 /**
- * Save the given position if there are less then three cards selected.
- * Otherwise use the three positions to check if they are a set.
- * Adjusts the points accordingly, end the game when no sets are left
- * and removes found sets.
+ * Set the value of the input field.
  *
  * @param {Number} x The x position.
  * @param {Number} y The y position.
@@ -440,7 +428,7 @@ function hint() {
  * Test if the given positions refer to cards that qualify as a set
  *
  * @param {Array} positions The card positions.
- * @return {Boolean} true if is a set false else.
+ * @return true if is a set false else.
  */
 function isSet(positions) {
     var idx1 = complField[positions[0][1]][positions[0][0]];
@@ -610,9 +598,6 @@ function gameOverCheck() {
     return true;
 }
 
-%%%%%%%%%%%%%%%%%%%%%
-% Draw and coloring %
-%%%%%%%%%%%%%%%%%%%%%
 /**
  * Draw all fields.
  */
@@ -637,8 +622,8 @@ function draw(x, y) {
     % Generate the text value that is to be assigned
     var spans = new Array();
     spans[0] = new Object();
-    spans[0].text = SYMBOLS[cardList[idx][SYM_P]];
-    spans[0].textColor = COLORS[cardList[idx][COL_P]];
+    spans[0].text = symbols[cardList[idx][SYM_P]];
+    spans[0].textColor = colors[cardList[idx][COL_P]];
 
     % Select apperance
     if (cardList[idx][APP_P] == ITALIC) {
@@ -717,25 +702,23 @@ function printInfoText(text) {
 
     \begin{Form}
 
-        % Header
         \begin{multicols}{2}
-            % Title
             \section*{Set}
-        \columnbreak{}
-            % Tooltip object
+        \columnbreak
             \begin{flushright}%
-                \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
-                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                        \centering?\strut{}
-                    \end{tcolorbox}%
-                }
+            \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
+            \PushButton[name=tooltipbtn, bordercolor=white]{%
+                \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                    \centering
+                    ?\strut
+                \end{tcolorbox}%
+            }
             \end{flushright}%
         \end{multicols}
 
         % Calculate the max height of a block
         \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt) / (\fieldHeight * 5) \relax}
+        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/(\fieldHeight * 5) \relax}
 
         \begin{center}
             % Add all card fields
@@ -795,19 +778,19 @@ function printInfoText(text) {
                 \PushButton[name=refill, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Refill card slots.\strut{}
+                        Refill card slots.\strut
                     \end{tcolorbox}
                 } &
                 \PushButton[name=hint, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Hint\strut{}
+                        Hint\strut
                     \end{tcolorbox}
                 }\\%
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
-                        Restart game\strut{}
+                        Restart game\strut
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
