--- a/src/tictactoe.tex
+++ b/src/tictactoe.tex
@@ -5,6 +5,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[margin=0.5in]{geometry}
 
+\usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 \usepackage{xcolor}
 \usepackage[pdftex]{hyperref}
@@ -36,35 +38,22 @@
 % Javascript
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
-\begin{insDLJS}[]{JSDateiname}{Tic-Tac-Toe}
+\begin{insDLJS}[]{JSDateiname}{TicTacToe}
 
-const GAME_DESC = "Tic-Tac-Toe is a turnbased multiplayer strategy game.\
-Each player has a symbol which is used to mark parts of the field.\
-The symbol is used to create a connected line of usually three symbols.\
-The player who is able to create such a line first wins.";
-
-% Outside variables
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 const SCREEN_TEXT_WIDTH = 300;
 const WINNING_PIECES = AFMakeNumber(\winningPieces);
-const MAX_PLAYERS = AFMakeNumber(\playerCount);
+const MAY_PLAYERS = AFMakeNumber(\playerCount);
 
-% Constants
-const EMPTY = 0;
-
-% Globals
-% The game field
+var run;
 var complField = new Array();
 % Lock if the game has ended
 var gameover = false;
-% Save the current turn
 var playerIdx = 1;
-% Save the last move for highlighting
 var lastField = false;
 
-% Symbol array (for each player)
-const PLAYER_SYMBOLS = [
+var playerSymbols = [
     0x2717,
     0x274D,
     0x2730,
@@ -72,8 +61,7 @@ const PLAYER_SYMBOLS = [
     0x271C
 ];
 
-% Each player gets a color
-const COLORS = new Array(
+var colors = new Array(
     [ "RGB", 0.843, 0.078, 0.058 ],
     [ "RGB", 0.203, 0.603, 0.054 ],
     [ "RGB", 0.078, 0.305, 0.560 ],
@@ -81,77 +69,54 @@ const COLORS = new Array(
     color.black
 );
 
-const HIGHLIGHT_COLOR = [ "RGB", 0.984, 0.800, 0.176 ];
+highlightcolor = [ "RGB", 0.984, 0.800, 0.176 ];
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-/**
- * Initialise the default game state.
- */
 function initialise() {
-    % Initlialise the array with a zeros
     for (var row = 0; row < FIELD_HEIGHT; row++) {
-        var zArr = new Array();
+        var tmp = new Array();
         for (var column = 0; column < FIELD_WIDTH; column++) {
-            zArr.push(EMPTY);
+            tmp.push(0);
         }
-        complField.push(zArr);
+        complField.push(tmp);
     }
 
-    % Init the GUI
     initialiseButtons();
 }
 
-/**
- * Initialise all buttons from the GUI.
- * For example add callbacks and set the correct colors.
- */
 function initialiseButtons() {
-    % Assign each button the coresponding function and disable the highlights
     this.getField("restart").setAction("MouseUp", "restart();");
     this.getField("restart").highlight="none";
 
-    % Each field needs to be connected to an input function
-    % Define text style
     var funcName = "markField";
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
             var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + "-" + y).setAction("MouseDown", callbackName);
-            this.getField("pos" + x + "-" + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
-            this.getField("pos" + x + "-" + y).alignment = "center";
+            this.getField("pos" + x + y).setAction("MouseDown", callbackName);
+            this.getField("pos" + x + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+            this.getField("pos" + x + y).alignment = "center";
         }
     }
 
-    % Info field setup
-    this.getField("info").fillColor = color.transparent;
-    this.getField("info").borderColor = color.transparent;
+    this.getField("winner").fillColor = color.transparent;
+    this.getField("winner").borderColor = color.transparent;
 
-    % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
 
-    % Print the initial move information
-    printCurrentMove();
+    printInfoText(0, false);
 }
 
-/**
- * Enable or disable the tooltip
- *
- * @param {Boolean} on Enable or disable tooltip
- */
 function tooltip(on) {
     if (on) {
-        % Move the tooltip field to the center of the screen
-        % and adjust the size so the text can be displayed
         var field = this.getField("tooltiptxt");
         field.delay = true;
-        field.value = GAME_DESC;
+        field.alignment = "center";
+        field.value = "This is a game.";
 
-        field.multiline = true;
-        field.textSize = 16;
         field.fillColor = color.gray;
         % hight 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
@@ -159,12 +124,10 @@ function tooltip(on) {
 
         field.delay = false;
     } else {
-        % Remove the field such that it is not visible
         var field = this.getField("tooltiptxt");
         field.delay = true;
         field.value = "";
 
-        field.multiline = false;
         field.fillColor = color.gray;
         field.rect = [0, 0, 0, 0];
 
@@ -172,43 +135,34 @@ function tooltip(on) {
     }
 }
 
-/**
- * Restart the game and clear everything
- */
 function restart() {
-    % Reset field
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = EMPTY;
-            resetDraw(x, y);
+            complField[y][x] = 0;
         }
     }
 
-    % Reset game state
+    % Reset field marking
     lastField = false;
+
     gameover = false;
     playerIdx = 1;
 
-    % Print the initial move information
-    printCurrentMove();
+    printInfoText(0, false);
+
+    draw();
 }
 
-%%%%%%%%%%%%%
-% Gamelogic %
-%%%%%%%%%%%%%
-/**
- * Set the value of the input field.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- */
+%%%%%%%%%%%%%%%%%%%%%
+% Draw and coloring %
+%%%%%%%%%%%%%%%%%%%%%
 function markField(x, y) {
-    % Remove blinking cursor after selection
-    this.getField("info").setFocus();
-
-    if (gameover || complField[y][x] != EMPTY) {
+    if (gameover || complField[y][x] != 0) {
         return;
     }
+
+    % Safe the last field so it can be marked
+    lastField = [x, y];
 
     complField[y][x] = playerIdx;
 
@@ -216,57 +170,34 @@ function markField(x, y) {
     var winner = checkForWinner(x, y);
 
     playerIdx++;
-    if (playerIdx > MAX_PLAYERS) {
+    if (playerIdx > MAY_PLAYERS) {
         playerIdx = 1;
     }
-
-    % Print the current move information
-    printCurrentMove();
 
     % Check if field full
     var full = true;
     if (winner == 0) {
-        for (var xx = 0; xx < FIELD_WIDTH; xx++) {
-            for (var yy = 0; yy < FIELD_HEIGHT; yy++) {
-                if (complField[yy][xx] == EMPTY) {
+        for (var x = 0; x < FIELD_WIDTH; x++) {
+            for (var y = 0; y < FIELD_HEIGHT; y++) {
+                if (complField[y][x] == 0) {
                     full = false;
-                    yy = FIELD_HEIGHT;
-                    xx = FIELD_WIDTH;
+                    y = FIELD_HEIGHT;
+                    x = FIELD_WIDTH;
                 }
             }
         }
     }
 
-    % When there is a winner of the field is full -> gameover
-    % Print whether the game is over, or whos turn it is
-    if (winner > 0) {
+    if (winner > 0 || full) {
         gameover = true;
-        var symbol = String.fromCharCode(PLAYER_SYMBOLS[winner - 1]);
-        var text = "The winner is: Player " + winner + " - (" + symbol + ")";
-        printInfoText(text, COLORS[winner - 1]);
-    } else if (full) {
-        gameover = true;
-        printInfoText("No one did win and the field is full.");
     }
 
-    draw(x, y);
+    % Print whether the game is over, or whos turn it is
+    printInfoText(winner, full);
 
-    % Safe the last field so it can be marked
-    lastField = [x, y];
+    draw();
 }
 
-/**
- * Check if there is a winner.
- * This is done using the last input that was taken,
- * since the game can only be won when the current
- * move is responsible for that.
- * Therefore all directions are checked whether a line
- * of a set length with the current player symbol can be formed.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- * @return {Number} The player index or 0 if no winner
- */
 function checkForWinner(x, y) {
     var count = 0;
     var maxCount = 0;
@@ -285,16 +216,13 @@ function checkForWinner(x, y) {
         for (var wp = -WINNING_PIECES + 1; wp < WINNING_PIECES; wp++) {
             var nx = x + directions[dirIdx] * wp;
             var ny = y + directions[dirIdx + 1] * wp;
-            % Border check
             if (nx < 0 || nx >= FIELD_WIDTH || ny < 0 || ny >= FIELD_HEIGHT || complField[ny][nx] != playerIdx) {
-                % Reset counter when line is broken
                 count = 0;
             } else {
                 count++;
                 maxCount = count;
             }
         }
-        % When there where enough pieces a winner was found
         if (maxCount >= WINNING_PIECES) {
             return playerIdx;
         }
@@ -302,73 +230,49 @@ function checkForWinner(x, y) {
     return 0;
 }
 
-%%%%%%%%%%%%%%%%%%%%%
-% Draw and coloring %
-%%%%%%%%%%%%%%%%%%%%%
-/**
- * Since only one field is updated with each input,
- * only this field needs to be redrawn.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- */
-function draw(x, y) {
-    var field = this.getField("pos" + x + "-" + y);
-    field.delay = true;
-    var value = complField[y][x];
+function draw() {
+    var field;
+    for (var x = 0; x < FIELD_WIDTH; x++) {
+        for (var y = 0; y < FIELD_HEIGHT; y++) {
+            field = this.getField("pos" + x + y);
+            field.delay = true;
+            var value = complField[y][x];
+            if (value > 0) {
+                field.textColor = colors[value - 1];
+                field.value = String.fromCharCode(playerSymbols[value - 1]);
+            } else {
+                field.value = "";
+            }
+            field.borderColor = color.white;
+            field.delay = false;
+        }
+    }
 
-    field.textColor = COLORS[value - 1];
-    field.value = String.fromCharCode(PLAYER_SYMBOLS[value - 1]);
-
-    % Highlight the current taken move
-    field.borderColor = HIGHLIGHT_COLOR;
-    field.delay = false;
-
-    % Reset highlight the last taken move
     if (lastField !== false) {
-        var xx = lastField[0];
-        var yy = lastField[1];
-        field = this.getField("pos" + xx + "-" + yy);
+        var x = lastField[0];
+        var y = lastField[1];
+        field = this.getField("pos" + x + y);
         field.delay = true;
-        field.borderColor = color.white;
+        field.borderColor = highlightcolor;
         field.delay = false;
     }
 }
 
-/**
- * Reset the current field to its default state.
- *
- * @param {Number} x The x position.
- * @param {Number} y The y position.
- */
-function resetDraw(x, y) {
-    var field = this.getField("pos" + x + "-" + y);
+function printInfoText(winner, full) {
+    var field = this.getField("winner");
     field.delay = true;
-    field.textColor = color.black;
-    field.value = "";
-    field.borderColor = color.white;
-    field.delay = false;
-}
-
-/**
- * Print information about which players turn it is.
- */
-function printCurrentMove() {
-    var symbol = String.fromCharCode(PLAYER_SYMBOLS[playerIdx - 1]);
-    var text = "Please make a move: Player " + playerIdx + " - (" + symbol + ")";
-    printInfoText(text);
-}
-
-/**
- * Print information about the game.
- *
- * @param {String} text Info string
- */
-function printInfoText(text, col=color.black) {
-    var field = this.getField("info");
-    field.delay = true;
-    field.value = text;
-    field.textColor = col;
+    if (winner > 0) {
+        field.textColor = colors[winner - 1];
+        var symbol = String.fromCharCode(playerSymbols[winner - 1]);
+        field.value = "The winner is: Player " + winner + " - (" + symbol + ")";
+    } else if (full) {
+        field.textColor = color.black;
+        this.getField("winner").value = "No one did win and the field is full.";
+    } else {
+        field.textColor = color.black;
+        var symbol = String.fromCharCode(playerSymbols[playerIdx - 1]);
+        field.value = "Please make a move: Player " + playerIdx + " - (" + symbol + ")";
+    }
     field.delay = false;
 }
 
@@ -381,36 +285,34 @@ function printInfoText(text, col=color.black) {
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+    \begin{multicols}{2}
+        \section*{Tic Tac Toe}
+    \columnbreak
+        \begin{flushright}%
+        \PushButton[name=tooltipbtn, bordercolor=white]{%
+            \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
+                \centering
+                ?\strut
+            \end{tcolorbox}%
+        }
+        \end{flushright}%
+    \end{multicols}
+
+    % Calculate the max width and height of a block
+    \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
+    \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
+
+    \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
+    \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
+
+    % Define the blocksize via the smaller amount
+    \ifnum\blocksizeW<\blocksizeH
+        \def\blocksize{\blocksizeW}
+    \else
+        \def\blocksize{\blocksizeH}
+    \fi
+
     \begin{Form}
-
-        % Header
-        \begin{multicols}{2}
-            % Title
-            \section*{Tic-Tac-Toe}
-        \columnbreak
-            % Tooltip object
-            \begin{flushright}%
-                \PushButton[name=tooltipbtn, bordercolor=white]{%
-                    \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
-                        \centering?\strut{}
-                    \end{tcolorbox}%
-                }
-            \end{flushright}%
-        \end{multicols}
-
-        % Calculate the max width and height of a block
-        \FPeval{\resultW}{(\fieldWidth * 4 + 3)}
-        \def\blocksizeW{\dimexpr (\linewidth-\resultW pt)/\fieldWidth \relax}
-
-        \FPeval{\resultH}{(\fieldHeight * 4 + 3)}
-        \def\blocksizeH{\dimexpr (500 pt -\resultH pt)/\fieldHeight \relax}
-
-        % Define the blocksize via the smaller amount
-        \ifnum\blocksizeW<\blocksizeH
-            \def\blocksize{\blocksizeW}
-        \else
-            \def\blocksize{\blocksizeH}
-        \fi
 
         \begin{tcolorbox}
             \begin{flushright}
@@ -418,7 +320,7 @@ function printInfoText(text, col=color.black) {
                     \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
                         \TextField[%
                             width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1-#2, readonly=true]{}%
+                            bordercolor=white, name=pos#1#2, readonly=true]{}%
                     }\vspace{3pt}
                     \newline%
                 }%
@@ -426,7 +328,7 @@ function printInfoText(text, col=color.black) {
         \end{tcolorbox}
 
         \begin{center}%
-            \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
+            \begin{tabularx}{\textwidth}{@{} X X @{}}%
                 \PushButton[name=restart, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
@@ -434,7 +336,7 @@ function printInfoText(text, col=color.black) {
                     \end{tcolorbox}
                 } &
                 \begin{tcolorbox}
-                    \TextField[name=info, width=\linewidth, readonly=true]{}
+                    \TextField[name=winner, width=\linewidth, readonly=true]{}
                 \end{tcolorbox}
             \end{tabularx}
         \end{center}
